crates/rargs/tests/snapshots/test_scripts__impl-104.snap
---
source: crates/rargc/tests/test_scripts.rs
description: "[stderr] dependencies.sh "
expression: "String::from_utf8(match \"stderr\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
[31mMissing dependency: [33mfail[31m[0m

This is meant to fail

