crates/rargs/tests/snapshots/test_scripts__impl-112.snap
---
source: crates/rargc/tests/test_scripts.rs
description: "[stdout] catch-all.sh required -h"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Required additional arguments

[4mUsage:[0m
  required [OPTIONS] [MESSAGE]
  required -h|--help

[4mArguments:[0m
  MESSAGE
    Message

[4mOptions:[0m
  -d --debug
    Debug mode
  -h --help
    Print help

